--- a/css/app.output.css
+++ b/css/app.output.css
@@ -1,38 +1,3 @@
-/*
-@mixin line-click {
-	&:active:before {
-		border-left: 4px solid lighten($dark-background-color, 50);
-		width : 1px;
-		height : 100%;
-		position : absolute;
-		left : 0;
-		top : 0;
-		content : ' ';
-	}
-}
-
-@mixin dark-line-click {
-	&:active:before {
-		border-left: 4px solid lighten($dark-background-color, 15);
-		width : 1px;
-		height : 100%;
-		position : absolute;
-		left : 0;
-		top : 0;
-		content : ' ';
-	}
-}
-
-
-@mixin reveal {
-	//&:active {
-		position : relative;
-		display : inline;
-		white-space : normal;
-		word-break: break-all;
-	//}
-}
-*/
 .oview-folder {
   overflow: hidden;
 }
@@ -314,12 +279,12 @@
 [data-oview-id=output].dark::-webkit-scrollbar-corner {
   background: #000000;
 }
-[data-oview-id=output].dark button {
+[data-oview-id=output].dark .oview-genericButton {
   border: 1px solid #3f3f3f;
   color: #000000;
   background-color: #636363;
 }
-[data-oview-id=output].dark button:active {
+[data-oview-id=output].dark .oview-genericButton:active {
   color: #fff;
   background-color: #005fb3;
 }
