--- a/css/app.panel.save.css
+++ b/css/app.panel.save.css
@@ -1,38 +1,3 @@
-/*
-@mixin line-click {
-	&:active:before {
-		border-left: 4px solid lighten($dark-background-color, 50);
-		width : 1px;
-		height : 100%;
-		position : absolute;
-		left : 0;
-		top : 0;
-		content : ' ';
-	}
-}
-
-@mixin dark-line-click {
-	&:active:before {
-		border-left: 4px solid lighten($dark-background-color, 15);
-		width : 1px;
-		height : 100%;
-		position : absolute;
-		left : 0;
-		top : 0;
-		content : ' ';
-	}
-}
-
-
-@mixin reveal {
-	//&:active {
-		position : relative;
-		display : inline;
-		white-space : normal;
-		word-break: break-all;
-	//}
-}
-*/
 [data-oview-id=saveDialog] {
   display: inline-block;
   position: absolute;
@@ -44,7 +9,10 @@
   border-radius: 4px;
   z-index: 11;
 }
-[data-oview-id=saveDialog] button {
+[data-oview-id=saveDialog] .oview-genericButton {
+  position: relative;
+  display: inline-block;
+  margin: 3px;
   padding: 0.4em 0.6em;
   cursor: pointer;
   border: 1px solid #cfcfcf;
@@ -53,7 +21,7 @@
   background-color: #e6e6e6;
   border-radius: 3px;
 }
-[data-oview-id=saveDialog] button:active {
+[data-oview-id=saveDialog] .oview-genericButton:active {
   color: #fff;
   background-color: #007ae6;
 }
@@ -61,12 +29,12 @@
   background-color: #000000;
   color: #CCCCCC;
 }
-[data-oview-id=saveDialog].oview-dark button {
+[data-oview-id=saveDialog].oview-dark .oview-genericButton {
   border: 1px solid #3f3f3f;
   color: #000000;
   background-color: #636363;
 }
-[data-oview-id=saveDialog].oview-dark button:active {
+[data-oview-id=saveDialog].oview-dark .oview-genericButton:active {
   color: #fff;
   background-color: #005fb3;
 }
